// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Certificação — regressão industrial (snapshots) > furação europeia na lateral — snapshot offsets do rasgo 1`] = `
[
  {
    "face": "B",
    "x": 37,
    "y": 541,
  },
  {
    "face": "B",
    "x": 463,
    "y": 541,
  },
]
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=1 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 698,
  "bodyWidth": 548,
  "height": 710,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 5,
  "posZ": 270.5,
  "pullDistanceMm": 500,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 341,
  "bodyWidth": 548,
  "height": 353,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -173.5,
  "posZ": 270.5,
  "pullDistanceMm": 500,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 341,
  "bodyWidth": 548,
  "height": 353,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 183.5,
  "posZ": 270.5,
  "pullDistanceMm": 500,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 222,
  "bodyWidth": 548,
  "height": 234,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -233,
  "posZ": 270.5,
  "pullDistanceMm": 500,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 222,
  "bodyWidth": 548,
  "height": 234,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 5,
  "posZ": 270.5,
  "pullDistanceMm": 500,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 222,
  "bodyWidth": 548,
  "height": 234,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 243,
  "posZ": 270.5,
  "pullDistanceMm": 500,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 162.5,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -262.75,
  "posZ": 270.5,
  "pullDistanceMm": 500,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 162.5,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -84.25,
  "posZ": 270.5,
  "pullDistanceMm": 500,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 162.5,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 94.25,
  "posZ": 270.5,
  "pullDistanceMm": 500,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 4`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 162.5,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 3,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 272.75,
  "posZ": 270.5,
  "pullDistanceMm": 500,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;
